--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,7 +1,7 @@
 eclipse.preferences.version=1
-environment/project/cdt.managedbuild.config.gnu.exe.debug.275614584/PREMAKE_PARAMS/delimiter=\:
-environment/project/cdt.managedbuild.config.gnu.exe.debug.275614584/PREMAKE_PARAMS/operation=append
-environment/project/cdt.managedbuild.config.gnu.exe.debug.275614584/PREMAKE_PARAMS/value=
+environment/project/cdt.managedbuild.config.gnu.exe.debug.275614584/PATH/delimiter=\:
+environment/project/cdt.managedbuild.config.gnu.exe.debug.275614584/PATH/operation=append
+environment/project/cdt.managedbuild.config.gnu.exe.debug.275614584/PATH/value=$PATH\:/home/sathya/rpi/tools/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian/bin
 environment/project/cdt.managedbuild.config.gnu.exe.debug.275614584/append=true
 environment/project/cdt.managedbuild.config.gnu.exe.debug.275614584/appendContributed=true
 environment/project/cdt.managedbuild.config.gnu.exe.release.636457886.850304687/PREMAKE_PARAMS/delimiter=\:
@@ -9,8 +9,5 @@ environment/project/cdt.managedbuild.config.gnu.exe.release.636457886.850304687/
 environment/project/cdt.managedbuild.config.gnu.exe.release.636457886.850304687/PREMAKE_PARAMS/value=--platform\=rpi
 environment/project/cdt.managedbuild.config.gnu.exe.release.636457886.850304687/append=true
 environment/project/cdt.managedbuild.config.gnu.exe.release.636457886.850304687/appendContributed=true
-environment/project/cdt.managedbuild.config.gnu.exe.release.636457886/PREMAKE_PARAMS/delimiter=\:
-environment/project/cdt.managedbuild.config.gnu.exe.release.636457886/PREMAKE_PARAMS/operation=append
-environment/project/cdt.managedbuild.config.gnu.exe.release.636457886/PREMAKE_PARAMS/value=
 environment/project/cdt.managedbuild.config.gnu.exe.release.636457886/append=true
 environment/project/cdt.managedbuild.config.gnu.exe.release.636457886/appendContributed=true
